TestRepo2/src/objects/Action_Product_Link__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipName>Action_Product_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Action_is_Completed__c</fullName>
        <formula>IF(TEXT(Action__r.Status__c) = &apos;Closed - Complete&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action is Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dave_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dave Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplication_Key__c</fullName>
        <formula>Action__c + &apos;|&apos; + Product_Classification__c + &apos;|&apos; + Product_Group__c + &apos;|&apos; + Generic_Brand__c + &apos;|&apos; + Sub_Brand__c + &apos;|&apos; + Individual_Brand__c + &apos;|&apos; + Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplication Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Brand__c</fullName>
        <label>Generic Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ind_Brand_Size__c</fullName>
        <formula>Individual_Brand__c + &apos;, &apos; + Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ind. Brand / Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Brand_Offline__c</fullName>
        <label>Individual Brands</label>
        <picklist>
            <picklistValues>
                <fullName>22 Marquis Coconut Cognac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 Marquis Rose Cognac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auchroisk 20YO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auchroisk 30YO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys Minis Orig &amp; MChoc &amp; Crml &amp; Coff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys Mudslide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys Original</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys Original Minis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys with Hint of Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys with Hint of Creme Caramel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys with Hint of Hazelnut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys with Hint of Mint Chocolate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black &amp; White Blended Whisky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Haus Schnapps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth&apos;s High &amp; Dry Gin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brora 35YO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchanan&apos;s DeLuxe Aged 12 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchanan&apos;s Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchanan&apos;s Red Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchanan&apos;s Special Reserve Aged 18 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulleit Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulleit Bourbon 10YO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulleit Rye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills 1608</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills Black Bush</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills Irish Honey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills Malt Aged 10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills Malt Aged 16 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills Malt Aged 21 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills Original</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Brand__c</fullName>
        <label>Individual Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Key__c</fullName>
        <formula>Product_Classification__c + &apos;|&apos; + Product_Group__c + &apos;|&apos; + Generic_Brand__c + &apos;|&apos; + Sub_Brand__c + &apos;|&apos; + Individual_Brand__c + &apos;|&apos; + Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Classification__c</fullName>
        <label>Product Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Brand__c</fullName>
        <label>Report Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_Offline__c</fullName>
        <label>Sizes</label>
        <picklist>
            <picklistValues>
                <fullName>1.75L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.946L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.75L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.375L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.2L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.1L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.05L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Brand__c</fullName>
        <label>Sub Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action Brand</label>
    <nameField>
        <displayFormat>APL-{0000000000}</displayFormat>
        <label>Brand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Action_Brands_are_uneditable</fullName>
        <active>true</active>
        <description>Disallows a user to edit the brands on an action if that action&apos;s due date was more than 5 days ago.</description>
        <errorConditionFormula>AND(Action__r.Due_Date__c &lt;= TODAY() - 7,
$Profile.Name != &apos;System Administrator&apos;,
$Profile.Name != &apos;Control - SAM&apos;)</errorConditionFormula>
        <errorMessage>This Action&apos;s due date was more than 5 days ago, so its Brands can no longer be edited.</errorMessage>
    </validationRules>
</CustomObject>